miraBeauWebApp/src/pages/groupTable/group-page.css
.list-grid {
  border-radius: 3px;
  margin-left: auto;
  margin-right: auto;
  overflow: hidden;
  margin-bottom: 3rem;
  box-shadow: 1px 1px 15px black;
  display: flex;
  flex-direction: column;
  align-items: stretch;
  justify-content: flex-start;
  border: 1px solid #e8e8e8;
  border-left: none;
  border-right: none;
}

.list-grid__header {
  display: flex;
  width:100%;
}

.list-grid__header:first-child {
  border-top-left-radius: 3px;
  border-top-right-radius: 3px;
}

.list-grid__column:last-child {
  border-left: 1px solid #e8e8e8;
}

.btn-primary--shadow{
  box-shadow: 1px 1px 15px black;
}

.btn-warning--shadow{
  box-shadow: 1px 1px 15px black;
}

.list-grid__column--item {
  padding-top:23px !important;
  padding-bottom:12px !important;
  font-size:13px !important;
}

.list-grid__column {
  color: #999;
  float:left;
  font-size: 11px;
  padding: 17px 9px 17px;
  width:25%;
  vertical-align: middle;
  text-align:center;
  height: 40px;
}

.list-grid__header,
.list-grid__filter {
  flex: 0 0 auto;
  background-color: #f8f8f8;
  border: 1px solid #f8f8f8;
  border-top: none;
}

.list-grid__header,
.list-grid__item {
  margin-right: 0;
  margin-left: 0;
}

.list-grid__body:empty {
  border-left: 1px solid #f8f8f8 !important;
  border-right: 1px solid #f8f8f8 !important;
  border-top: 1px solid #f8f8f8 !important;
}

.list-grid__body:empty:after {
  display: flex;
  content: 'No results';
  text-align: center;
  position: absolute;
  left: 0;
  top: 0;
  right: 0;
  bottom: 0;
  align-items: center;
  justify-content: center;
  color: #f8f8f8;
  font-style: italic;
}

.list-grid__body {
  position: relative;
  min-height: 5rem;
  padding-left: 0;
  padding-right: 0;
  overflow-y: auto;
  overflow-x: hidden;
}

.addButton {
  min-width:100% !important;
  box-shadow: 1px 1px 12px black;
  float: right;
  padding-top:0px;
}

.logoutButton {
  box-shadow: 1px 1px 12px black;
  float: right;
  padding-top:0px;
}

.button {
  height:25px;
  font-size:9px !important;
  min-width:52px;
}

.list-grid__button {
  width:100px;
  height: 25px;
}

.leftButton {
  margin-right:10px;
}

.blue {
  color: blue;
}

.c-filter-input__input {
  width:100%;
  border-radius: 3px;
}

.logo {
  width:300px;
}

@media only screen and (max-width: 760px) {
  .list-grid__column {
    color: #999;
    float:left;
    font-size: 11px;
    padding: 5px 9px 17px;
    width:25%;
    vertical-align: middle;
    text-align:center;
    height: 40px;
  }

  .leftButton{
    margin-right:0px;
  }

  .logo {
    width:250px;
  }

  .button {
    height:24px;
    margin-bottom:4px !important;
  }
}

